<resources>
    <!--各个界面的标签-->
    <string name="label_main">主界面</string>
    <string name="label_register">注册界面</string>
    <string name="label_login">登录界面</string>
    <string name="label_forget">忘记密码界面</string>
    <!--应用名字-->
    <string name="app_name">股友圈</string>
    <!--主界面导航栏-->
    <string name="main_plus">+</string>
    <string name="main_home">首页</string>
    <string name="main_message">消息</string>
    <string name="main_stock_circle">股友圈</string>
    <string name="main_profile">我的</string>
    <!--顶部导航栏-->
    <string name="home_news">头条</string>
    <string name="home_live">直播</string>
    <string name="home_hot">热门</string>
    <string name="home_funny">股趣</string>
    <!--直播界面-->
    <string name="live_recommend">推荐</string>
    <!--我的界面-->
    <string name="profile_sign">签到</string>
    <string name="profile_wallet">钱包</string>
    <string name="profile_collection">收藏</string>
    <string name="profile_stock">股事儿</string>
    <string name="profile_host">申请主播认证</string>
    <string name="profile_news">脱水资讯</string>
    <string name="profile_setting">设置</string>
    <!--登录界面-->
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="forget_password_hint">请再次输入密码</string>
    <string name="login_register">没有账号？注册？</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="register_star">*</string>
    <string name="register_star_hint">为选填项</string>
    <string name="login_hint">注册登录即表示同意股友圈须知及免责声明</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="invite_code_hint">请输入邀请码</string>
    <string name="get_code_hint">获取验证码</string>
    <string name="forget_btn">提交</string>
    <!--股趣儿界面-->
    <string name="stock_hint_fall">跌</string>
    <string name="stock_hint_rise">涨</string>
    <string name="stock_current_gold_hint">当前金币</string>
    <string name="stock_gold_rule_hint">注：起始为100，上限为10000</string>
    <string name="stock_pledge_text">抵押：</string>
    <string name="stock_pledge_hint">请输入金币</string>
    <!--设置界面-->
    <string name="setting_safe_hint">账号与安全</string>
    <string name="setting_team_hint">团队介绍</string>
    <string name="setting_contact_hint">联系我们</string>
    <string name="setting_feedback_hint">意见反馈</string>
    <string name="setting_share_hint">分享股友圈</string>
    <string name="setting_logout_hint">退出登录</string>
</resources>
