<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background">
    <!--通用Title-->
    <include
        android:id="@+id/mTitleLay"
        layout="@layout/layout_title" />
    <!--账号与安全层-->
    <RelativeLayout
        android:id="@+id/mSafeLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mTitleLay"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:padding="16dp">
        <!--账号与安全提示文字-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/setting_safe_hint" />
        <!--箭头-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_profile_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <!--团队介绍层-->
    <RelativeLayout
        android:id="@+id/mTeamLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mSafeLay"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:padding="16dp">
        <!--团队介绍文字-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/setting_team_hint" />
        <!--箭头-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_profile_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/mTeamLay"
        android:layout_marginStart="20dp"
        android:background="@color/main_color_divider" />
    <!--联系我们层-->
    <RelativeLayout
        android:id="@+id/mContactLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mTeamLay"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:padding="16dp">
        <!--联系我们文字-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/setting_contact_hint" />
        <!--箭头-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_profile_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/mContactLay"
        android:layout_marginStart="20dp"
        android:background="@color/main_color_divider" />
    <!--意见反馈层-->
    <RelativeLayout
        android:id="@+id/mFeedBackLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mContactLay"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:padding="16dp">
        <!--意见反馈文字-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/setting_feedback_hint" />
        <!--箭头-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_profile_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <!--分享股友圈层-->
    <RelativeLayout
        android:id="@+id/mShareLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mFeedBackLay"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:padding="16dp">
        <!--分享股友圈文字-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/setting_share_hint" />
        <!--箭头-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/icon_profile_arrow"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <!--退出登录按钮-->
    <Button
        android:id="@+id/mLogoutBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/mShareLay"
        android:layout_marginTop="26dp"
        android:background="@drawable/selector_profile_btn"
        android:text="@string/setting_logout_hint"
        android:textColor="@android:color/white" />
</RelativeLayout>