<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon_login_bg">
        <!--左上角关闭按钮-->
        <ImageView
            android:id="@+id/mCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="54px"
            android:layout_marginTop="24px"
            android:background="@mipmap/icon_login_close"
            android:contentDescription="@string/app_name" />
        <!--LOGO-->
        <ImageView
            android:id="@+id/mLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="135px"
            android:background="@mipmap/icon_login_logo"
            android:contentDescription="@string/app_name" />
        <!--手机号编辑框-->
        <EditText
            android:id="@+id/mPhoneEdit"
            android:layout_width="630px"
            android:layout_height="130px"
            android:layout_below="@id/mLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120px"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/login_phone_hint"
            android:inputType="phone"
            android:labelFor="@+id/mPhoneEdit"
            android:paddingEnd="30px"
            android:paddingStart="35px"
            android:textColor="@android:color/white"
            android:textColorHint="@color/main_text_normal"
            android:textCursorDrawable="@color/main_text_selected" />
        <!--分割线-->
        <View
            android:id="@+id/mDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignEnd="@id/mPhoneEdit"
            android:layout_alignStart="@id/mPhoneEdit"
            android:layout_below="@id/mPhoneEdit"
            android:background="@color/main_color_divider" />
        <!--验证码编辑框层-->
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/mCodeEditLay"
            android:layout_width="630px"
            android:layout_height="130px"
            android:layout_below="@id/mDivider"
            android:layout_centerHorizontal="true">
            <!--验证码编辑框-->
            <EditText
                android:id="@+id/mCodeEdit"
                android:layout_width="630px"
                android:layout_height="130px"
                android:background="@drawable/shape_login_edit"
                android:hint="@string/register_code_hint"
                android:inputType="number"
                android:labelFor="@+id/mPasswordEdit"
                android:paddingEnd="30px"
                android:paddingStart="35px"
                android:textColor="@android:color/white"
                android:textColorHint="@color/main_text_normal"
                android:textCursorDrawable="@color/main_text_selected" />
            <!--获取验证码按钮-->
            <Button
                android:id="@+id/mCodeBtn"
                android:layout_width="183px"
                android:layout_height="65px"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30px"
                android:layout_marginTop="30px"
                android:background="@drawable/selector_profile_btn"
                android:text="@string/get_code_hint"
                android:textColor="@android:color/white" />
        </com.zhy.autolayout.AutoRelativeLayout>
        <!--分割线-->
        <View
            android:id="@+id/mDivider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignEnd="@id/mCodeEditLay"
            android:layout_alignStart="@id/mCodeEditLay"
            android:layout_below="@id/mCodeEditLay"
            android:background="@color/main_color_divider" />
        <!--密码编辑框-->
        <EditText
            android:id="@+id/mPasswordEdit"
            android:layout_width="630px"
            android:layout_height="130px"
            android:layout_below="@id/mDivider1"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:labelFor="@+id/mPasswordEdit"
            android:paddingEnd="30px"
            android:paddingStart="35px"
            android:textColor="@android:color/white"
            android:textColorHint="@color/main_text_normal"
            android:textCursorDrawable="@color/main_text_selected" />
        <!--分割线-->
        <View
            android:id="@+id/mDivider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignEnd="@id/mPasswordEdit"
            android:layout_alignStart="@id/mPasswordEdit"
            android:layout_below="@id/mPasswordEdit"
            android:background="@color/main_color_divider" />
        <!--确认密码编辑框-->
        <EditText
            android:id="@+id/mRepeatEdit"
            android:layout_width="630px"
            android:layout_height="130px"
            android:layout_below="@id/mDivider2"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_login_edit"
            android:hint="@string/forget_password_hint"
            android:inputType="textPassword"
            android:labelFor="@+id/mPasswordEdit"
            android:paddingEnd="30px"
            android:paddingStart="35px"
            android:textColor="@android:color/white"
            android:textColorHint="@color/main_text_normal"
            android:textCursorDrawable="@color/main_text_selected" />
        <!--提交按钮-->
        <Button
            android:id="@+id/mSubmitBtn"
            android:layout_width="630px"
            android:layout_height="130px"
            android:layout_below="@id/mRepeatEdit"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="182px"
            android:layout_marginTop="149px"
            android:background="@drawable/selector_profile_btn"
            android:text="@string/forget_btn"
            android:textColor="@android:color/white" />
    </com.zhy.autolayout.AutoRelativeLayout>
</ScrollView>